--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@ playwright-config.json
 **/dist/**/*.d.ts
 **/dist/**/*.d.ts.map
 **/dist/**/*.js.map
+
+# Playwright test artifacts
+test-results/
+playwright-report/
+playwright/.cache/
+
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
