--- a/nmr-formatter/package.json
+++ b/nmr-formatter/package.json
@@ -6,7 +6,10 @@
     "build": "tsc && node scripts/build-browser.js",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
-    "test": "playwright test",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
+    "test:e2e": "playwright test",
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
@@ -14,7 +17,9 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.56.0",
-    "typescript": "^5.9.2"
+    "@vitest/coverage-v8": "^3.2.4",
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "private": true
 }
